--- a/TODO.org
+++ b/TODO.org
@@ -20,8 +20,10 @@
    CLOSED: [2021-11-20 Sat 23:53]
 ** DONE [#B] Add spacing between headings and text   
    CLOSED: [2021-11-20 Sat 23:53]
-** TODO [#B] Figure out tables
+** DONE [#B] Figure out tables
+   CLOSED: [2021-11-21 Sun 11:47]
  
+
 * Deployment
 ** TODO [#A] Deploy on GitHub Pages and replace current njagi.me
 ** TODO [#A] Redirect blog.urbanslug.com to njagi.me
