--- a/TODO.org
+++ b/TODO.org
@@ -1,5 +1,6 @@
 #+STARTUP: overview
 
+** TODO Fix www redirect to apex                                 :Deployment:
 ** DONE [#A] Copy posts, notes & wikis from previous pages          :General:
    CLOSED: [2021-11-12 Fri 10:11]
 ** DONE [#A] Deploy on GitHub Pages and replace current njagi.me :Deployment:
